[package]
name = "chibi_spawner"
version = "0.1.2"
edition = "2021"

[dependencies]
gtk = { version = "0.8.2", package = "gtk4", features = ["v4_10"] }
gtk4-layer-shell = "0.3"
ksni = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
